styles.css
* {
    box-sizing: border-box;
}

p {
    margin:6px;
}

.red_pozole {
    color: rgb(189, 39, 127);
}

ul {
    display: flex;
    gap:20px;
    list-style-type: none;
}

ul li {
    font-size: 24px;
}

ul a {
    color: inherit;
    text-decoration: none;
}

.main-header {
    padding: 24px;
    border-bottom: 1px solid hsl(0deg 0% 0% / 0.2);
}

li.logo { 
    margin-right: auto;
    font-size: 28px;
    flex-basis:400px;
}

.logo a {
    font-size: 2.125rem;
    font-weight: 500;
}

.front-page-style {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #EAE4DD;
}

.main-body {
    font-size: 24px;
    font: black;
    margin: 40px
}

/* old code for container
.phrase-block {
    width: 100%;
    padding: 8px;
    background-color: bisque;
    text-align: center;
    margin: 0px auto;
    font-size: 28px;

}

.phrase {
    margin: 8px 100px;
}
new code using flex: */

.phrase-block {
    width: 100%;
    padding: 0px;
    margin: 0px;
    font-size: 28px;
    gap: 1rem;
    display: flex;
    text-align: center;


    border-radius: 10px;
    border-color: red firebrick;

}

.phrase {
    flex-basis: 100%;
}

